<?xml version="1.0"?>
<package format="2">
  <name>subsystem_practice</name>
  <version>0.0.1</version>
  <description>The subsystem_practice package</description>
  <maintainer email="haa-c001@athuman.com">athuman</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <export>
  </export>
</package>
